# Graphics-Project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TIME_LOG.md
assets/scenes/cash_register/: cash_register.gltf
assets/scenes/dragon_scene/: dragon_scene.gltf
assets/scenes/test_scene/: gltf_test_scene.gltf
assets/shaders/: basic.fsh  basic.vsh  shadow.vsh  skybox.fsh  skybox.vsh
src/: camera.cpp  camera.hpp  entity.cpp  entity.hpp  environment.cpp  environment.hpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model_importer.cpp  model_importer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  util.hpp
src/importers/: scene_importer.cpp  scene_importer.hpp  texture_importer.cpp  texture_importer.hpp
